RESOLVED FIXED90384
[Qt] Fix WebProcess crash on Mac when accessing a site with video tag.
https://bugs.webkit.org/show_bug.cgi?id=90384
Summary [Qt] Fix WebProcess crash on Mac when accessing a site with video tag.
Alexis Menard (darktears)
Reported 2012-07-02 07:18:54 PDT
[Qt] Fix WebProcess crash on Mac when accessing a site with video tag.
Attachments
Patch (7.81 KB, patch)
2012-07-02 07:26 PDT, Alexis Menard (darktears)
no flags
Alexis Menard (darktears)
Comment 1 2012-07-02 07:26:06 PDT
Jocelyn Turcotte
Comment 2 2012-07-02 07:27:18 PDT
Comment on attachment 150420 [details] Patch Thanks for fixing it!
WebKit Review Bot
Comment 3 2012-07-02 09:31:29 PDT
Comment on attachment 150420 [details] Patch Clearing flags on attachment: 150420 Committed r121686: <http://trac.webkit.org/changeset/121686>
WebKit Review Bot
Comment 4 2012-07-02 09:31:33 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.