[Qt] Fix WebProcess crash on Mac when accessing a site with video tag. https://bugs.webkit.org/show_bug.cgi?id=90384

Reviewed by Jocelyn Turcotte.

We need to initialize the private symbols used by MediaPlayerPrivateQTKit
otherwise they will be null and it will lead to a crash. We copy WebSystemInterface
files for WK2 just like the Mac port as WK2 may have different needs than WK1 layer (we
may add or remove symbols in here). It doesn't fix the video rendering yet but it's
first step.

* Target.pri:
* WebProcess/WebCoreSupport/qt/WebSystemInterface.h: Added.
* WebProcess/WebCoreSupport/qt/WebSystemInterface.mm: Added.
(InitWebCoreSystemInterfaceForWK2):
* WebProcess/qt/WebProcessMainQt.cpp:
(WebKit::WebProcessMainQt):


Canonical link: https://commits.webkit.org/108246@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@121686 268f45cc-cd09-0410-ab3c-d52691b4dbfc